put the scala compiler memory settings back as travis build is hanging